# moledao-spider

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
electron-vite-project/: electron-builder.json5  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
electron-vite-project/electron/: main.ts  preload.ts
electron-vite-project/electron/services/: scraper.ts  settingsStore.ts
electron-vite-project/public/icons/: mac.icns
electron-vite-project/src/: App.tsx  index.css  vite-env.d.ts
electron-vite-project/src/hooks/: useAppLocale.ts  useScraperBridge.ts  useSystemTheme.ts
electron-vite-project/src/i18n/: resources.ts
electron-vite-project/src/lib/: analytics.test.ts  analytics.ts  i18n.ts  meta.ts
electron-vite-project/src/store/: settings.ts
electron-vite-project/src/types/: ipc.ts  settings.ts
har/: moledao.io_api_career_details1.har  moledao.io_api_career_details2.har  moledao.io_api_career_list.har
openspec/: project.md
openspec/changes/add-ai-wage-meter/: proposal.md  tasks.md
openspec/changes/add-electron-ai-grabber/: proposal.md  tasks.md
openspec/changes/add-electron-desktop-app/: proposal.md  tasks.md
openspec/changes/add-job-word-export/: tasks.md
openspec/changes/add-plausible-analytics/: proposal.md  tasks.md
openspec/changes/add-theme-selector/: proposal.md  tasks.md
src/moledao_spider/: __init__.py  cli.py  clients.py  exporter.py  logging_utils.py  models.py
tests/: test_cli.py  test_clients.py  test_exporter.py  test_models.py  utils.py
(+29 files in other folders)
