[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moledao-spider"
version = "0.1.0"
description = "Replay moledao.io job data and export DOCX bundles"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Moledao"}]
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "python-docx>=0.8.11",
  "click>=8.1.7",
  "tenacity>=8.2.3",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-mock>=3.12.0",
  "types-requests>=2.31.0.6",
  "types-beautifulsoup4>=4.12.0.7"
]

[project.scripts]
moledao-spider = "moledao_spider.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
